test(ognl): re-enable testCustomOgnlMapBlocked for OGNL 3.4.8
- Re-enable testCustomOgnlMapBlocked test that was temporarily disabled
- Update assertions to expect null instead of exception (OGNL 3.4.8 behavior)
- Add testDisallowCustomOgnlMapFlagExplicitlyEnabled to verify flag behavior

Custom map blocking now returns null instead of throwing OgnlException,
which is still secure behavior - the custom map instantiation is prevented.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>